# Personal_Homepage

./: .gitignore  LICENSE  README.md  blog.html  donate.html  friends.html  index.html  package-lock.json  package.json  uno.config.js  vite.config.js
public/: 404.html  giscus-dark.css  giscus.css  sitemap.xml
src/: App.vue  BlogPage.vue  DonatePage.vue  FriendsPage.vue  blog-main.js  donate-main.js  friends-main.js  main.js
src/composables/: useHomepageState.js
src/styles/: homepage.css
status-backend/: .env.example  Cargo.toml  DEPLOY.md  README.md
status-backend/scripts/: playwright-fetch.mjs
status-backend/src/: admin_pages.rs  main.rs
status-backend/templates/admin/: blog_admin.html  common.css  links_admin.html  schedule_admin.html  status_admin.html
status-client-android/: README.md  config.env  status-v7.js  status.js
status-client-android/magisk-module/: module.prop  service.sh
status-client-android/magisk-module/common/: config.sh
status-client-rust/: Cargo.toml  README.md  status-client.toml
status-client-rust/src/: main.rs
